Shared & Riders Modules created

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -14,5 +14,5 @@
                autocomplete="off"
         >
     </div>
-    <surf-navigation></surf-navigation>
+    <rs-navigation></rs-navigation>
 </mat-toolbar>
