--- a/src/app/riders/rider-profile/rider-profile.component.scss
+++ b/src/app/riders/rider-profile/rider-profile.component.scss
@@ -1,5 +1,5 @@
-@import "../../../../assets/scss/_responsive";
-@import "../../../../assets/scss/_mixins";
+@import "src/assets/scss/responsive";
+@import "src/assets/scss/mixins";
 
 .container{
     display: flex;
