--- a/src/app/shared/time-line/time-line.component.html
+++ b/src/app/shared/time-line/time-line.component.html
@@ -1,9 +1,9 @@
 <div class="container" *ngFor="let timelineItem of timeline; first as isFirst; last as isLast">
     <div class="container__timeline">
-        <surf-time-line-line *ngIf="isFirst && isLast" [ongoing]="ongoing"></surf-time-line-line>
-        <surf-time-line-line *ngIf="isFirst && !isLast" [next]="true"></surf-time-line-line>
-        <surf-time-line-line *ngIf="isLast" [previous]="true" [ongoing]="ongoing"></surf-time-line-line>
-        <surf-time-line-line *ngIf="!isLast && !isFirst" [next]="true" [previous]="true"></surf-time-line-line>
+        <rs-time-line-line *ngIf="isFirst && isLast" [ongoing]="ongoing"></rs-time-line-line>
+        <rs-time-line-line *ngIf="isFirst && !isLast" [next]="true"></rs-time-line-line>
+        <rs-time-line-line *ngIf="isLast" [previous]="true" [ongoing]="ongoing"></rs-time-line-line>
+        <rs-time-line-line *ngIf="!isLast && !isFirst" [next]="true" [previous]="true"></rs-time-line-line>
     </div>
     <div class="container__details">
         <mat-card class="container__details__card">
@@ -17,8 +17,9 @@
                     </div>
                 </div>
             </mat-card-title>
-            <mat-card-subtitle *ngIf="timelineItem.time" >{{timelineItem.time | date:'HH:mm | d. MMMM YYYY'}}</mat-card-subtitle>
-            <p  class="container__details__points" *ngIf="timelineItem.content">{{timelineItem.content}}</p>
+            <mat-card-subtitle
+                *ngIf="timelineItem.time">{{timelineItem.time | date:'HH:mm | d. MMMM YYYY'}}</mat-card-subtitle>
+            <p class="container__details__points" *ngIf="timelineItem.content">{{timelineItem.content}}</p>
         </mat-card>
     </div>
 </div>
