--- a/src/app/shared/time-line/time-line.component.scss
+++ b/src/app/shared/time-line/time-line.component.scss
@@ -1,5 +1,5 @@
-@import "../../../assets/scss/_responsive";
-@import "../../../assets/scss/_variables";
+@import "src/assets/scss/responsive";
+@import "src/assets/scss/variables";
 
 .container {
     display: grid;
