--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -17,7 +17,7 @@
     <aside class="aside">
         <h2>Some Awesome Riders</h2>
         <div class="rider__cards">
-            <surf-rider-card *ngFor="let rider of riders" [rider]="rider"></surf-rider-card>
+            <rs-rider-card *ngFor="let rider of riders" [rider]="rider"></rs-rider-card>
         </div>
     </aside>
 </div>
