--- a/src/app/riders/rider-profile/rider-timeline/rider-timeline.component.scss
+++ b/src/app/riders/rider-profile/rider-timeline/rider-timeline.component.scss
@@ -1,5 +1,5 @@
-@import "../../../../../assets/scss/_variables";
-@import "../../../../../assets/scss/_responsive";
+@import "src/assets/scss/variables";
+@import "src/assets/scss/responsive";
 
 
 .container__timeline {
