--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -1,6 +1,6 @@
-@import "../../../assets/scss/_mixins";
-@import "../../../assets/scss/_responsive";
-@import "../../../assets/scss/_variables";
+@import "src/assets/scss/mixins";
+@import "src/assets/scss/responsive";
+@import "src/assets/scss/variables";
 
 .division-selector {
     display: flex;
