--- a/src/app/shared/time-line/time-line-line/time-line-line.component.scss
+++ b/src/app/shared/time-line/time-line-line/time-line-line.component.scss
@@ -1,8 +1,8 @@
 @use "sass:math";
-@import "../../../../assets/scss/_variables";
+@import "src/assets/scss/variables";
 
 $event-color: #3f51b5;
-$event-width:1.5rem;
+$event-width: 1.5rem;
 $ongoing-color: #bb4444;
 $line-color: #b4bbe4;
 $line-width: 0.1rem;
@@ -17,35 +17,35 @@ $line-width: 0.1rem;
     height: 100%;
     min-width: $event-width * 2;
 
-    &__item{
+    &__item {
 
-        &__one{
+        &__one {
             grid-column: 1 / 2;
             grid-row: 1 / 2;
             border-right: math.div($line-width, 2) solid $color-grey-light-1;
         }
 
-        &__two{
+        &__two {
             grid-column: 2 / 3;
             grid-row: 1 / 2;
             border-left: math.div($line-width, 2) solid $color-grey-light-1;
             border-bottom: math.div($line-width, 2) dashed $color-grey-light-1;
         }
 
-        &__three{
+        &__three {
             grid-column: 1 / 2;
             grid-row: 2 / 3;
             border-right: math.div($line-width, 2) solid $color-grey-light-1;
         }
 
-        &__four{
+        &__four {
             grid-column: 2 / 3;
             grid-row: 2 / 3;
             border-left: math.div($line-width, 2) solid $color-grey-light-1;
             border-top: math.div($line-width, 2) dashed $color-grey-light-1;
         }
 
-        &__full{
+        &__full {
             grid-column: 1 / 3;
             grid-row: 1 / 3;
             margin: auto;
@@ -58,17 +58,17 @@ $line-width: 0.1rem;
     }
 }
 
-.ongoing{
+.ongoing {
     animation: ongoingAnimation 1s linear infinite;
 }
 
 @keyframes ongoingAnimation {
-    50%{
+    50% {
         background-color: $ongoing-color;
     }
 }
 
-.noBorder{
+.noBorder {
     border-left: none;
     border-right: none;
 }
