--- a/src/app/home/event-card/event-card.component.scss
+++ b/src/app/home/event-card/event-card.component.scss
@@ -1,6 +1,6 @@
-@import "../../../../assets/scss/_variables";
-@import "../../../../assets/scss/_mixins";
-@import "../../../../assets/scss/_responsive";
+@import "src/assets/scss/variables";
+@import "src/assets/scss/mixins";
+@import "src/assets/scss/responsive";
 
 .event__card {
     width: 400px;
