--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
-@import "../../../assets/scss/_mixins";
-@import "../../../assets/scss/_responsive";
+@import "src/assets/scss/mixins";
+@import "src/assets/scss/responsive";
 
 .content {
     width: 100%;
@@ -35,7 +35,7 @@
                 grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
             }
 
-            & surf-carousel {
+            & rs-carousel {
                 width: 100%;
                 max-width: 100%;
             }
