--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -264,4 +264,11 @@ th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:la
     }
 }
 
+.loading {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
