--- a/src/app/riders/rider-profile/rider-profile.component.html
+++ b/src/app/riders/rider-profile/rider-profile.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+<div class="loading" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
+
+<div class="container" *ngIf="!isLoading">
     <div class="overview">
         <rs-rider-overview *ngIf="rider" [rider]="rider"></rs-rider-overview>
     </div>
