--- a/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -27,6 +27,7 @@
             max-width: 200px;
             border-radius: 50%;
             margin: auto;
+            width: 100%;
         }
 
         h1 {
