Rider profile request with Search Engine Optimised URLs (slugified nickname with id). Realised with a SlugifyPipe.

--- a/src/app/riders/riders.component.html
+++ b/src/app/riders/riders.component.html
@@ -92,7 +92,7 @@
                                 <mat-icon *ngIf="!isFavoriteRider(rider.id)">favorite_border</mat-icon>
                             </button>
                             <button mat-icon-button title="View rider profile" aria-label="View rider profile"
-                                    routerLink="/riders/{{rider.id}}">
+                                    routerLink="/riders/{{ rider.nickName + '-' + rider.id | slugify }}">
                                 <mat-icon>visibility</mat-icon>
                             </button>
                         </td>
