--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -44,6 +44,10 @@
 
         &__riders{
 
+            & rs-carousel {
+                width: 100%;
+                max-width: 100%;
+            }
         }
     }
 
