Using division coloring pipe and added competition routing to event-card, using chips in surf event

--- a/src/app/home/event-card/event-card.component.html
+++ b/src/app/home/event-card/event-card.component.html
@@ -18,10 +18,10 @@
     <mat-chip-list aria-label="Divisions">
         <mat-chip
             *ngFor="let competition of surfEvent.competitions"
-            [color]="getColorOfDivision(competition.division)"
+            [color]="competition.division | divisionColor"
+            routerLink="/event/{{surfEvent.id}}/competition/{{ competition.division }}"
             selected>
             {{competition.division}}
         </mat-chip>
-
     </mat-chip-list>
 </mat-card>
