--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -40,6 +40,10 @@
 
         &__selection{
 
+
+            mat-chip{
+                cursor: pointer;
+            }
         }
 
         &__riders{
