Added temporary surf-event hashtag link

--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -22,6 +22,14 @@
 
         &__header{
 
+            dl > dd{
+                padding-bottom: 1rem;
+            }
+
+            dt{
+                font-weight: bold;
+            }
+
 
             &-logo{
                 max-height: 200px;
