--- a/src/app/surf-event/surf-event/surf-event.component.html
+++ b/src/app/surf-event/surf-event/surf-event.component.html
@@ -4,41 +4,50 @@
             <img class="event__details__header-logo" src="{{surfEvent.logo}}">
             <h1>{{surfEvent.name}}</h1>
             <dl>
-                <dt>Description:</dt>
+                <dt>Description</dt>
                 <dd>{{surfEvent.description}}</dd>
-                <dt>Start:</dt>
+                <dt>Start</dt>
                 <dd>{{surfEvent.startDateTime | date:'d MMMM YYYY HH:mm'}}</dd>
-                <dt>End:</dt>
+                <dt>End</dt>
                 <dd>{{surfEvent.endDateTime | date:'d MMMM YYYY HH:mm'}}</dd>
-                <dt>Location:</dt>
+                <dt>Location</dt>
                 <dd>{{surfEvent.location}}</dd>
-                <dt>Hashtag:</dt>
-                <dd>{{surfEvent.hashTag}}</dd>
+                <dt>Hashtag</dt>
+                <dd>
+                    <a href="https://www.instagram.com/explore/tags/{{surfEvent.hashTag}}"
+                       target="_blank" rel="noopener noreferrer">
+                        #{{surfEvent.hashTag}}
+                    </a>
+                </dd>
             </dl>
         </div>
     </div>
     <div class="event__divisions">
-        <h2>Competitions</h2>
-        <mat-chip-list aria-label="Divisions" class="event__divisions__selection">
-            <mat-chip
-                *ngFor="let competition of surfEvent.competitions"
-                [color]="competition.division | divisionColor"
-                routerLink="/event/{{surfEvent.id}}/competition/{{ competition.division }}"
-                selected>
-                {{competition.division}}
-            </mat-chip>
-        </mat-chip-list>
-        <h2>Riders</h2>
-        <div *ngFor="let division of surfEvent.competitions" class="event__divisions__riders">
-            <rs-rider-card *ngFor="let rider of division.riders | slice:0:1" [rider]="rider"></rs-rider-card>
+        <div class="event__divisions__selection">
+            <h2>Competitions</h2>
+            <mat-chip-list aria-label="Divisions">
+                <mat-chip
+                    *ngFor="let competition of surfEvent.competitions"
+                    [color]="competition.division | divisionColor"
+                    routerLink="/event/{{surfEvent.id}}/competition/{{ competition.division }}"
+                    selected>
+                    {{competition.division}}
+                </mat-chip>
+            </mat-chip-list>
         </div>
-<!--        <div *ngFor="let division of surfEvent.competitions" class="event__divisions__riders">-->
-<!--            <rs-carousel [index]="0" [auto]="false">-->
-<!--                <ng-container *ngFor="let rider of division.riders">-->
-<!--                    <rs-rider-card [rider]="rider" *rs-carousel-item></rs-rider-card>-->
-<!--                </ng-container>-->
-<!--            </rs-carousel>-->
-<!--        </div>-->
+        <div class="event__divisions__riders">
+            <h2>Riders</h2>
+            <div *ngFor="let division of surfEvent.competitions">
+                <rs-rider-card *ngFor="let rider of division.riders | slice:0:1" [rider]="rider"></rs-rider-card>
+            </div>
+<!--            <div *ngFor="let division of surfEvent.competitions" class="event__divisions__riders">-->
+<!--                <rs-carousel [index]="0" [auto]="false">-->
+<!--                    <ng-container *ngFor="let rider of division.riders">-->
+<!--                        <rs-rider-card [rider]="rider" *rs-carousel-item></rs-rider-card>-->
+<!--                    </ng-container>-->
+<!--                </rs-carousel>-->
+<!--            </div>-->
+        </div>
     </div>
 </div>
 <div class="event__map">
