--- a/src/app/surf-event/surf-event/surf-event.component.html
+++ b/src/app/surf-event/surf-event/surf-event.component.html
@@ -51,5 +51,5 @@
     </div>
 </div>
 <div class="event__map">
-    Map
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2733.1607076880637!2d7.6155563160159705!3d46.761728653948126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDbCsDQ1JzQyLjIiTiA3wrAzNycwMy45IkU!5e0!3m2!1sde!2sch!4v1630915170035!5m2!1sde!2sch"allowfullscreen="" loading="lazy"></iframe>
 </div>
