--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -6,6 +6,10 @@
     flex-direction: row;
     width: 100%;
 
+    h1, h2{
+        padding-bottom: 0.5rem;
+    }
+
     @include respond(medium) {
         flex-direction: column;
     }
