--- a/src/app/surf-event/surf-event/surf-event.component.html
+++ b/src/app/surf-event/surf-event/surf-event.component.html
@@ -1,7 +1,7 @@
 <div class="event">
     <div class="event__details">
         <div class="event__details__header">
-            <img class="event__details__header-logo" src="{{surfEvent.logo}}">
+            <img class="event__details__header-logo" src="{{surfEvent.logo}}" alt="event logo">
             <h1>{{surfEvent.name}}</h1>
             <dl>
                 <dt>Description</dt>
