--- a/src/app/shared/time-line/time-line-line/time-line-line.component.scss
+++ b/src/app/shared/time-line/time-line-line/time-line-line.component.scss
@@ -2,10 +2,10 @@
 @import "src/assets/scss/variables";
 
 $event-color: #3f51b5;
-$event-width: 1.5rem;
 $ongoing-color: #bb4444;
 $line-color: #b4bbe4;
 $line-width: 0.1rem;
+$line-dash-width: 0.35rem;
 
 .container {
 
@@ -13,19 +13,17 @@ $line-width: 0.1rem;
     height: 100%;
 
     svg{
-        stroke: $event-color;
+        stroke: $line-color;
         height: 100%;
         width: 100%;
 
         line{
-            stroke-width: 2;
+            stroke-width: $line-width;
             vector-effect: non-scaling-stroke;
         }
 
         .info{
-            stroke-width: 2;
-            vector-effect: non-scaling-stroke;
-            stroke-dasharray: 2 2;
+            stroke-dasharray: $line-dash-width $line-dash-width;
         }
 
         circle{
@@ -34,8 +32,6 @@ $line-width: 0.1rem;
         }
 
         .ongoing {
-            fill: $event-color;
-            vector-effect: non-scaling-stroke;
             animation: ongoingAnimation 1s linear infinite;
         }
     }
