--- a/src/app/shared/time-line/time-line-line/time-line-line.component.html
+++ b/src/app/shared/time-line/time-line-line/time-line-line.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" #svgContainer>
     <svg viewBox="0 0 10 10">
-        <line *ngIf="previous" x1="5" x2="5" y1="-1000" y2="5" />
-        <line *ngIf="next" x1="5" x2="5" y1="5" y2="1000" />
-        <line class="info" x1="5" x2="1000" y1="5" y2="5" />
+        <line *ngIf="previous" x1="5" x2="5" y1="-2500" y2="5" />
+        <line *ngIf="next" x1="5" x2="5" y1="5" y2="2500" />
+        <line class="info" x1="5" x2="10" y1="5" y2="5" />
         <circle cx="5" cy="5" r="1"/>
         <circle *ngIf="ongoing" class="ongoing" cx="5" cy="5" r="1.5"/>
     </svg>
