--- a/src/app/shared/time-line/time-line-line/time-line-line.component.html
+++ b/src/app/shared/time-line/time-line-line/time-line-line.component.html
@@ -1,4 +1,4 @@
-<div class="container" #svgContainer>
+<div class="container">
     <svg viewBox="0 0 10 10">
         <line *ngIf="previous" x1="5" x2="5" y1="-2500" y2="5" />
         <line *ngIf="next" x1="5" x2="5" y1="5" y2="2500" />
