--- a/src/app/shared/time-line/time-line-line/time-line-line.component.scss
+++ b/src/app/shared/time-line/time-line-line/time-line-line.component.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 @import "src/assets/scss/variables";
+@import "src/assets/scss/responsive";
 
 $event-color: #3f51b5;
 $ongoing-color: #bb4444;
@@ -9,13 +10,19 @@ $line-dash-width: 0.35rem;
 
 .container {
 
-    width: 80px;
+    position: relative;
     height: 100%;
 
+    min-width: 60px;
+
     svg{
-        stroke: $line-color;
-        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
         width: 100%;
+        height: 100%;
+
+        stroke: $line-color;
 
         line{
             stroke-width: $line-width;
