--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -135,6 +135,7 @@
 
             & tr {
                 transition: all .3s;
+                cursor: pointer;
             }
 
             & tr:hover {
