--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -25,6 +25,7 @@
     margin: 3rem;
     box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
     color: $color-primary;
+    height: 100%;
 
     @include respond(small) {
         margin: .5rem;
