--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -266,10 +266,6 @@ th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:la
 }
 
 .loading {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 1rem;
 }
 
