--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "assets/scss/_mixins";
+@import "assets/scss/_responsive";
 @import "assets/scss/_variables";
 
 * {
@@ -38,7 +39,6 @@ h2 {
 
 snack-bar-container {
 
-
     &.success,
     &.warning,
     &.error {
@@ -46,22 +46,38 @@ snack-bar-container {
         z-index: 20;
         text-transform: uppercase;
         background-color: white;
+
+        @include respond(small) {
+            margin-top: 1.2rem;
+        }
     }
 
     &.success {
-        color: $color-text-1;
+        color: $color-white;
+        background-color: $color-success;
+
+        .mat-simple-snackbar-action > button {
+            color: $color-white;
+        }
     }
 
     &.warning {
-        // TODO: DEFINE COLOR SCHEME
-        color: $color-warn;
+        color: $color-text-1;
+        background-color: $color-warn;
+
+        .mat-simple-snackbar-action > button {
+            color: $color-text-1;
+        }
     }
 
     &.error {
-        // TODO: DEFINE COLOR SCHEME
-        color: $color-error;
-    }
+        color: $color-white;
+        background-color: $color-error;
 
+        .mat-simple-snackbar-action > button {
+            color: $color-white;
+        }
+    }
 }
 
 
