Prepared competition component for dropzone

--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -1,2 +1,11 @@
-<p>competition works!</p>
-<rs-drop-zone></rs-drop-zone>
+<h1>Competition</h1>
+<div class="dropzone">
+    <div class="dropzone__registered">
+        <h2>Registered</h2>
+        <rs-drop-zone></rs-drop-zone>
+    </div>
+    <div class="dropzone__qualification">
+        <h2>Qualification</h2>
+        <rs-drop-zone [itemLimit]="8"></rs-drop-zone>
+    </div>
+</div>
