--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -2,7 +2,20 @@
 <div class="dropzone">
     <div class="dropzone__registered">
         <h2>Registered</h2>
-        <rs-drop-zone></rs-drop-zone>
+        <rs-drop-zone>
+            <mat-card rs-drop-placeholder>
+                I am a placeholder
+            </mat-card>
+            <mat-card rs-drop-item>
+                I am a Rider
+            </mat-card>
+            <mat-card rs-drop-item>
+                I am a Rider too
+            </mat-card>
+            <mat-card rs-drop-item>
+                I am also a Rider
+            </mat-card>
+        </rs-drop-zone>
     </div>
     <div class="dropzone__qualification">
         <h2>Qualification</h2>
