--- a/src/app/shared/drop-zone/drop-zone-item/drop-zone-item.component.html
+++ b/src/app/shared/drop-zone/drop-zone-item/drop-zone-item.component.html
@@ -1,8 +1,3 @@
 <mat-card>
-    <div class="placeholder" *ngIf="Placeholder">
-        I am a placeholder
-    </div>
-    <div #content>
-        <ng-content></ng-content>
-    </div>
+    <ng-container [ngTemplateOutlet]="content.templateRef"></ng-container>
 </mat-card>
