Simplified drop-zone-item

--- a/src/app/shared/drop-zone/drop-zone-item/drop-zone-item.component.scss
+++ b/src/app/shared/drop-zone/drop-zone-item/drop-zone-item.component.scss
@@ -1,8 +1,4 @@
-mat-card{
+.container{
     background: lightblue;
-}
-
-.placeholder{
-    display: flex;
-    justify-content: center;
+    min-height: 2rem;
 }
