--- a/src/app/shared/drop-zone/drop-zone-item/drop-zone-item.component.html
+++ b/src/app/shared/drop-zone/drop-zone-item/drop-zone-item.component.html
@@ -1,3 +1,3 @@
-<mat-card>
+<div class="container">
     <ng-container [ngTemplateOutlet]="content.templateRef"></ng-container>
-</mat-card>
+</div>
