--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -3,16 +3,13 @@
     <div class="dropzone__registered">
         <h2>Registered</h2>
         <rs-drop-zone>
-            <mat-card rs-drop-placeholder>
-                I am a placeholder
-            </mat-card>
-            <mat-card rs-drop-item>
+            <mat-card>
                 I am a Rider
             </mat-card>
-            <mat-card rs-drop-item>
+            <mat-card>
                 I am a Rider too
             </mat-card>
-            <mat-card rs-drop-item>
+            <mat-card>
                 I am also a Rider
             </mat-card>
         </rs-drop-zone>
