--- a/src/app/shared/rider-card/rider-card.component.html
+++ b/src/app/shared/rider-card/rider-card.component.html
@@ -3,7 +3,7 @@
         <div mat-card-avatar
              class="rider__card__header__image"
              [style.background-image]="'url(' + rider.profilePicture + ')'"></div>
-        <mat-card-title> {{rider.firstName}} {{rider.lastName}}</mat-card-title>
-        <mat-card-subtitle>{{rider.division}}</mat-card-subtitle>
+        <mat-card-title>{{ rider.firstName }} {{ rider.lastName }}</mat-card-title>
+        <mat-card-subtitle>{{ rider.division | titlecase }}</mat-card-subtitle>
     </mat-card-header>
 </mat-card>
