--- a/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -30,6 +30,12 @@
             width: 100%;
         }
 
+        &-favorite {
+            display: flex;
+            justify-content: center;
+        }
+
+
         h1 {
             margin-top: 1rem;
         }
@@ -53,3 +59,5 @@
         }
     }
 }
+
+
